@@ -34,11 +34,10 @@ use MooseX::Types::ISO8601 qw/
 }
 
 use Test::More;
-use Test::Exception;
-
+use Test::Fatal;
 use DateTime;
 
-lives_ok {
+is(exception {
     my $i = My::DateClass->new(
         date => '2009-01-01',
         time => '12:34:29Z',
@@ -47,9 +46,10 @@ lives_ok {
     is( $i->date, '2009-01-01', 'Date unmangled' );
     is( $i->time, '12:34:29Z', 'Time unmangled' );
     is( $i->datetime, '2009-01-01T12:34:29Z', 'Datetime unmangled' );
-} 'Date class instance';
+},
+undef, 'Date class instance');
 
-#lives_ok {
+is(exception {
     my $date = DateTime->now;
     my $i = My::DateClass->new(
         map { $_ => $date } qw/date time datetime/
@@ -58,7 +58,8 @@ lives_ok {
     like( $i->date, qr/\d{4}-\d{2}-\d{2}/, 'Date mangled' );
     like( $i->time, qr/\d{2}:\d{2}Z/, 'Time mangled' );
     like( $i->datetime, qr/\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}Z/, 'Datetime mangled' );
-#} 'Date class instance with coercion';
+},
+undef, 'Date class instance with coercion');
 
 {
     my $datetime = MooseX::Types::DateTime::to_DateTime('2011-01-04T18:14:15.1234Z');
@@ -98,10 +99,10 @@ lives_ok {
         second => 0,
         time_zone => 'Asia/Taipei'
     );
-    dies_ok { to_ISO8601DateTimeStr($datetime) };
+    like(exception { to_ISO8601DateTimeStr($datetime) }, qr/cannot coerce non-UTC time/);
 
     $datetime->set_time_zone('UTC');
-    lives_ok { to_ISO8601DateTimeStr($datetime) };
+    is(exception { to_ISO8601DateTimeStr($datetime) }, undef);
 }
 {
     # You must say Zulu, or we cannot make sense of the date.
